added GET /rooms/question/{qId}
